src/test/ui/rfc-2632-const-trait-impl/call-generic-method-fail.stderr
error[E0277]: can't compare `T` with `_` in const contexts
  --> $DIR/call-generic-method-fail.rs:4:8
   |
LL |     *t == *t
   |        ^^ no implementation for `T == _`
   |
note: the trait `PartialEq<_>` is implemented for `T`, but that implementation is not `const`
  --> $DIR/call-generic-method-fail.rs:4:8
   |
LL |     *t == *t
   |        ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
