src/test/ui/rfc-2632-const-trait-impl/call-generic-method-fail.rs
#![feature(const_trait_impl)]

pub const fn equals_self<T: PartialEq>(t: &T) -> bool {
    *t == *t
    //~^ ERROR can't compare
}

fn main() {}
